scrollbar fix

--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body
 {
     margin: 2.5%;
     background-color: #e3e3e3;
+    -ms-overflow-style: none;
+}
+body::-webkit-scrollbar {
+    display: none;
+  }
+html 
+{
+    scrollbar-width: none;
 }
 ul
 {
